# TraceAI

./: .env.example  .gitignore  ARCHITECTURE.md  INSTALL_TEAM.md  LICENSE  README.md  SECURITY.md  investigate.bat  pyproject.toml  run.bat  setup-vscode.bat  setup.bat  traceai-architecture-report.md  traceai-capability-report.md  traceai-current-state.md  traceai.bat  traceai_setup.py
.claude/skills/: webview-fix.md
docs/architecture/: ARCHITECTURE.md
src/task_analyzer/: __init__.py
src/task_analyzer/api/: __init__.py  __main__.py  server.py
src/task_analyzer/cli/: __init__.py  main.py  wizard.py
src/task_analyzer/connectors/: __init__.py
src/task_analyzer/core/: __init__.py  audit_logger.py  investigation_state.py  llm_resilience.py  rate_limiter.py  security_guard.py  validation.py
src/task_analyzer/investigation/: __init__.py  code_flow_engine.py  deep_investigator.py  engine.py  evidence_aggregator.py  graph_engine.py  parallel_engine.py  planner.py  root_cause_engine.py  sql_intelligence.py  task_classifier.py
src/task_analyzer/knowledge/: __init__.py  scanner.py  workspace_scanner.py
src/task_analyzer/models/: __init__.py  schemas.py
src/task_analyzer/security/: __init__.py  credential_manager.py
src/task_analyzer/skills/: __init__.py  base_skill.py  code_analysis.py  cross_repo_analysis.py  database_analysis.py  database_schema.py  log_analysis.py  repo_analysis.py  skill_registry.py  sql_query.py  ticket_context.py
src/task_analyzer/storage/: __init__.py  local_store.py
src/task_analyzer/utils/: __init__.py  logging.py
src/task_analyzer/workspace_intelligence/: __init__.py  index.py  ranked_table_selector.py  schema_relation_builder.py
tests/unit/connectors/: test_registry.py
tests/unit/core/: test_models.py  test_storage.py
vscode-extension/: .vscodeignore  package-lock.json  package.json
vscode-extension/scripts/: bundle-backend.js
vscode-extension/src/: extension.ts
vscode-extension/src/providers/: investigationTreeProvider.ts  taskTreeProvider.ts
vscode-extension/src/services/: apiService.ts  panelManager.ts  (+3 more)
(+31 files in other folders)
