[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-analyzer"
version = "0.1.0"
description = "Modular AI developer assistant platform for investigating tasks, bugs, and incidents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Task Analyzer Contributors" },
]
keywords = ["ai", "developer-tools", "langchain", "claude", "investigation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "keyring>=25.0",
    "gitpython>=3.1",
    "httpx>=0.27.0",
    "aiohttp>=3.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30",
    "websockets>=12.0",
]
all = [
    "task-analyzer[dev,api]",
]

[project.scripts]
task-analyzer = "task_analyzer.cli.main:app"
ta = "task_analyzer.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/task_analyzer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
